<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginActivity" >

    <com.brainSocket.khednima3ak3.views.ImageViewAppBG
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/bg2" />

    <!-- Login progress -->

    <LinearLayout
        android:id="@+id/login_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/login_status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-light"
            android:text=" "
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <!-- Login form -->

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="40dp"
            android:orientation="vertical"
            android:paddingBottom="16dp" >

            <com.brainSocket.khednima3ak3.views.TextViewCustomFont
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_form"
                android:hint="@string/prompt_email"
                android:paddingBottom="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="20dp"
                android:text="@string/verif_desc"
                android:textColor="#ff333333"
                android:textSize="@dimen/ts_text_normal"
                app:fontId="1" />

            <EditText
                android:id="@+id/etVerifCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/verif_hint"
                android:maxLength="4"
                android:maxLines="1"
                android:inputType="number"
                android:singleLine="true" />

            <com.brainSocket.khednima3ak3.views.TextViewCustomFont
                android:id="@+id/btnVerif"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:gravity="center"
                android:layout_marginTop="25dp"
                android:background="@drawable/shape_rounded_orange"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:paddingBottom="12dp"
                android:paddingTop="7dp"
                android:text="@string/verif_action_activate"
                android:textSize="@dimen/ts_title_small"
                android:textColor="@android:color/white"
                appLfontId="2" />

            <com.brainSocket.khednima3ak3.views.TextViewCustomFont
                android:id="@+id/btnRsendCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="30dp"
                android:background="@drawable/shape_rounded_orange"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="8dp"
                android:paddingBottom="10dp"
                android:textColor="@android:color/white"
                android:text="@string/verif_action_resend_activation"
                android:textSize="@dimen/ts_text_small"
                app:fontId="2" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="15dp"
                android:gravity="right"
                android:orientation="vertical" >

                <com.brainSocket.khednima3ak3.views.TextViewCustomFont
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/verif_rerigister_text"
                    android:textSize="@dimen/ts_text_normal"
                    app:fontId="1" />

                <com.brainSocket.khednima3ak3.views.TextViewCustomFont
                    android:id="@+id/btnRe_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/verif_rerigister"
                    android:textColor="@color/blue_facebook"
                    android:textSize="@dimen/ts_text_big"
                    app:fontId="1" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</merge>