<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/svUserInfoForm"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/login_form_side_margin"
            android:layout_marginRight="@dimen/login_form_side_margin"
            android:background="@drawable/bg_form"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="20dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/local_signup_form_header"
                android:textColor="@android:color/black"
                android:textSize="@dimen/ts_text_normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/your_account_safe"
                android:textColor="@color/gray_dark"
                android:textSize="@dimen/ts_text_small" />

            <ImageView
                android:id="@+id/btnFBLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="18dp"
                android:src="@drawable/btn_fb" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/or"
            android:textColor="@android:color/black"
            android:textSize="@dimen/ts_title_xbig" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/login_form_input_margin"
            android:layout_marginRight="@dimen/login_form_input_margin"
            android:background="@drawable/bg_form"
            android:gravity="right"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="20dp" >
            
            <com.brainSocket.khednima3ak3.views.TextViewCustomFont 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/login_prompt_real_name"
                android:textSize="@dimen/ts_text_small"
                android:textColor="@color/app_theme_orange"
                />

            <com.brainSocket.khednima3ak3.views.EditTextCustomFont
                android:id="@+id/etFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/login_form_input_margin"
                android:layout_marginRight="@dimen/login_form_input_margin"
                android:layout_marginTop="15dp"
                android:hint="@string/login_prompt_fname"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@android:color/black"
                app:fontId="1" />

            <com.brainSocket.khednima3ak3.views.EditTextCustomFont
                android:id="@+id/etLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/login_form_input_margin"
                android:layout_marginRight="@dimen/login_form_input_margin"
                android:layout_marginTop="15dp"
                android:hint="@string/login_prompt_lname"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@android:color/black"
                app:fontId="1" />

            <Spinner
                android:id="@+id/spGenderPicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/array_gender"
                android:gravity="right"
                android:prompt="@string/gender_prompt" />

            <!--
            <com.brainSocket.khednima3ak3.views.EditTextCustomFont
                android:id="@+id/etJob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/login_form_input_margin"
                android:layout_marginRight="@dimen/login_form_input_margin"
                android:layout_marginTop="15dp"
                android:hint="@string/login_prompt_job"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@android:color/black"
                app:fontId="1" />
                -->

            <com.brainSocket.khednima3ak3.views.TextViewCustomFont
                android:id="@+id/btnSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/shape_rounded_orange"
                android:gravity="center"
                android:paddingBottom="12dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:text="@string/signup"
                android:textColor="@android:color/white"
                android:textSize="@dimen/ts_text_normal"
                app:fontId="2" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>