<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/vContainer"
              xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llGallery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="16dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_gallery"/>

                <com.brainSocket.khednima3ak3.views.TextViewCustomFont
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/pick_photo_gallery"
                    android:textColor="@color/black_light"
                    app:fontId="2"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.6dp"
                android:layout_weight="1"
                android:background="@color/black_light"/>

            <LinearLayout
                android:id="@+id/llCamera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="16dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_cam"/>

                <com.brainSocket.khednima3ak3.views.TextViewCustomFont
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/pick_photo_cam"
                    android:textColor="@color/black_light"
                    app:fontId="2"/>
            </LinearLayout>
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="0.6dp"
            android:layout_weight="1"
            android:background="@color/black_light"/>

        <LinearLayout
            android:id="@+id/llCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="14dp">

            <com.brainSocket.khednima3ak3.views.TextViewCustomFont
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/pick_photo_cancel"
                android:textColor="@color/black_light"
                app:fontId="2"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>